tests/integration/subgraph/snapshots/main__integration__subgraph__publish__subgraph_publish_json_includes_data_and_error_code_when_a_downstream_launch_fails.snap
---
source: tests/integration/subgraph/publish.rs
expression: json
---
{
  "json_version": "1",
  "data": {
    "api_schema_hash": "123456",
    "supergraph_was_updated": true,
    "subgraph_was_created": false,
    "subgraph_was_updated": true,
    "launch_url": "https://studio.apollographql.com/graph/my-graph/launches/launch-1",
    "launch_cli_copy": null,
    "launch_status": "COMPLETED",
    "launch_superseded": false,
    "downstream_launches": [
      {
        "graph_id": "my-graph",
        "variant_name": "mobile",
        "status": "FAILED",
        "superseded": false,
        "url": "https://studio.apollographql.com/graph/my-graph/launches/launch-2"
      }
    ],
    "success": false
  },
  "error": {
    "message": "The publish to 'my-graph@current' succeeded, but a triggered launch did not complete successfully. See the launch report above for details.",
    "code": "E047"
  }
}
