tests/integration/subgraph/snapshots/main__integration__subgraph__publish__subgraph_publish_json_keeps_the_publish_response_when_the_launch_wait_times_out.snap
---
source: tests/integration/subgraph/publish.rs
expression: json
---
{
  "json_version": "1",
  "data": {
    "api_schema_hash": "123456",
    "supergraph_was_updated": true,
    "subgraph_was_created": false,
    "subgraph_was_updated": true,
    "launch_url": "https://studio.apollographql.com/graph/my-graph/launches/launch-1",
    "launch_cli_copy": null,
    "launch_status": null,
    "launch_superseded": false,
    "downstream_launches": [],
    "success": false
  },
  "error": {
    "message": "Timed out waiting for the launch to complete.",
    "code": "E065"
  }
}
