tests/integration/subgraph/snapshots/main__integration__subgraph__publish__subgraph_publish_reports_triggered_downstream_launches_in_json.snap
---
source: tests/integration/subgraph/publish.rs
expression: json
---
{
  "json_version": "1",
  "data": {
    "api_schema_hash": "123456",
    "supergraph_was_updated": true,
    "subgraph_was_created": false,
    "subgraph_was_updated": true,
    "launch_url": "https://studio.apollographql.com/graph/my-graph/launches/launch-1",
    "launch_cli_copy": null,
    "launch_status": "COMPLETED",
    "launch_superseded": false,
    "downstream_launches": [
      {
        "graph_id": "my-graph",
        "variant_name": "mobile",
        "status": "COMPLETED",
        "superseded": false,
        "url": "https://studio.apollographql.com/graph/my-graph/launches/launch-2"
      }
    ],
    "success": true
  },
  "error": null
}
